# rust_crosscompile_samples

./: Cargo.toml  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/rustsample/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/rustsample/: MainActivity.kt  MathLib.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
ios/hello/: .gitignore
ios/hello/hello/: ContentView.swift  Hello-Bridging-Header.h  helloApp.swift
ios/hello/hello.xcodeproj/: project.pbxproj
ios/hello/helloTests/: helloTests.swift
ios/hello/helloUITests/: helloUITests.swift  helloUITestsLaunchTests.swift
ohos/AppScope/: app.json5
ohos/AppScope/resources/base/element/: string.json
ohos/entry/src/main/cpp/: CMakeLists.txt
ohos/entry/src/main/cpp/types/libhello/: oh-package.json5
ohos/entry/src/main/ets/pages/: Index.ets
src/: lib.rs
